- update some dependencies to obviate some security vulnerabilities; - implement a basic version of a PDF-filler using PDF-Lib; - generate new PDF on supporting characters

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ WebTools/Properties/PublishProfiles/Localhost.pubxml.user
 bin/
 WebTools/bin/
 WebTools/dist/trek.js
+WebTools/dist/trek.js.LICENSE.txt
 WebTools/src/**/*.js
 /.vs/WebTools-StarTrek
 /packages
