--- a/WebTools/package.json
+++ b/WebTools/package.json
@@ -6,18 +6,19 @@
   "private": true,
   "dependencies": {
     "es6-promise": "^3.2.1",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "pdf-lib": "1.16.0",
+    "react": "^15.7.0",
+    "react-dom": "^15.7.0",
     "systemjs": "^0.19.27"
   },
   "devDependencies": {
-    "@types/react": "16.8.7",
-    "@types/react-dom": "16.8.2",
+    "@types/react": "16.14.14",
+    "@types/react-dom": "16.9.14",
     "systemjs-builder": "^0.15.18",
     "ts-loader": "5.3.3",
-    "typescript": "3.1.6",
-    "webpack": "4.29.6",
-    "webpack-cli": "3.2.3"
+    "typescript": "3.9.10",
+    "webpack": "5.45.1",
+    "webpack-cli": "4.8.0"
   },
   "scripts": {
     "package": "webpack"
